categorias crud y grafica

--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -21438,4 +21438,5 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
 
 .card-title-line {
     margin: 25px 0 !important;
+    font-size: 30px;
 }
